--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: lightcoral;
+    background-color: lightgrey;
     text-align: center;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
@@ -7,7 +7,7 @@ body {
 }
 
 table {
-    margin: 200px auto;
+    margin-top: 100px auto;
     border: 10px solid lightgray;
     padding: 10px;
     text-align: center;
