--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,8 @@ body {
     background-color: rgb(118, 35, 90);
     text-align: center;
     color: white;
-    font-family: "Times New Roman", Times, serif;    border-color: black;
+    font-family: "Times New Roman", Times, serif;
+    border-color: black;
 }
 
 table {
@@ -22,7 +23,7 @@ td {
     border-radius: 10px;
     font-size: 20px;
     cursor: pointer;
-    
+
 }
 
 .cell {
@@ -71,4 +72,10 @@ h1 {
     width: auto;
     font-size: 50px;
     border-radius: 20px;
+}
+
+.lives {
+    margin: auto;
+    height: auto;
+    width: auto;
 }
