--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,7 @@ h1 {
 }
 
 .lives {
+    display: inline-block;
     font-size: medium;
     margin: auto;
     height: auto;
@@ -78,6 +79,8 @@ h1 {
     background-color: black;
     margin-bottom: 5px;
     border-radius: 5px;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 .difficulty-btn-container button {
@@ -85,10 +88,27 @@ h1 {
     border-radius: 5px;
 }
 
-.hints {
-    font-size: 40px;
+.darkMode {
+    display: block;
     margin: auto;
-    background-color: black;
-    margin-bottom: 5px;
-    border-radius: 5px;
+    margin-top: 5px;
+}
+
+img {
+    width: 70px;
+    background-color: rgb(123, 100, 116);
+
+}
+
+img:hover {
+    cursor: pointer;
+    scale: 1.15;
+    transition: .5s;
+}
+
+button.img {
+    background-color: rgb(123, 100, 116);
+    border: none;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
