--- a/css/main.css
+++ b/css/main.css
@@ -20,8 +20,8 @@ td {
 .cell {
     color: black;
     border: 1px solid #ddd;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     font-size: 1.5em;
     cursor: pointer;
     transition: transform 0.6;
@@ -39,7 +39,7 @@ td {
     background-color: #856e6e;
     box-shadow: inset 3px 3px 6px rgba(0, 0, 0, 0.2);
     transition: transform 0.3s ease-in-out;
-    
+
 }
 
 .cell.shown {
@@ -119,4 +119,13 @@ button.darkMode {
 
 .safe-click {
     margin-top: 10px;
+}
+
+.undo {
+    display: inline-block;
+    margin: auto;
+    margin-top: 10px;
+    cursor: pointer;
+    border-radius: 20px;
+    border: none;
 }
